--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,19 @@ server:
 domain:
   name: cart
 
+sequence-nextval: event_seq.nextval
+
 spring:
   application:
     name: awesome-cart-service
+
+  jpa:
+    hibernate.ddl-auto: create
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
   datasource:
     platform: h2
-    url: jdbc:h2:mem:testdb;
+    url: jdbc:h2:mem:testdb;MODE=MYSQL;
     username: sa
     password: null
     driver-class-name: org.h2.Driver
@@ -17,6 +24,19 @@ spring:
   h2:
     console:
       enabled: true
+  # jpa:
+  #   hibernate.ddl-auto: create
+  #   show-sql: true
+  #   database-platform: org.hibernate.dialect.MariaDB103Dialect
+  # datasource:
+  #   driver-class-name: org.mariadb.jdbc.Driver
+  #   url: jdbc:mariadb://localhost:3300/carts?characterEncoding=UTF-8
+  #   username: root
+  #   password: skcc
+  #   platform: mariadb
+  #   initialization-mode: always
+  #   continue-on-error: true
+
   cloud:
     stream:
       binders:
