add env mybatis config rest

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,8 @@ server:
 domain:
   name: cart
 
-sequence-nextval: nextval(event_seq)
+mybatis:
+  config-location: mybatis-config-h2.xml
 
 spring:
   application:
